# quickxorhash

./: Cargo.toml  LICENSE-MIT  README.md
benches/: bench.rs
src/: lib.rs
tests/: test_vectors.rs
