[package]
name = "quickxorhash"
description = "QuickXorHash implementation in Rust."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
base64 = "0.21.0"
bencher = "0.1.5"

[[bench]]
name = "bench"
harness = false
